update user proto
